--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 body{
     display: flex;
     flex-direction: column;
-}
+    justify-content: center;
+    
+   }
 #logo{
     max-width: 50px;
 }
@@ -14,12 +16,17 @@ body{
     display: flex;
     min-height: 100vh;
     align-items: center;
+    padding: 100px;
 }
 .about{
     display: flex;
     flex-direction: column;
     text-align: center;
 }
+.row{
+    padding: 20px;
+    display: flex;
+    }
 .doe{
     display: flex;
     justify-content: center;
@@ -44,7 +51,7 @@ body{
     }
     
 div h1,div h3{
-    color: #124D2C;
+    color: #0e311e;
 }
 div h2{
     color: #91120e;
@@ -55,4 +62,38 @@ p{
 }
 .accordion{
     width: 100%;
+}
+
+.carousel-inner img{
+    min-width: 100%;
+    height: 90vh;
+    object-fit: cover; 
+    margin-top: 70px;
+}
+
+.carousel-item {
+    position: relative;
+}
+.carousel-item img {
+    width: 100%;
+    object-fit: cover;
+}
+.overlay {
+    position: absolute;
+    top: 2%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to top, rgb(255, 255, 255), rgba(0, 0, 0, 0));
+}
+.title{
+    position: absolute;
+    top: 12%;
+    text-align: center;
+    width: 100%;
+            z-index: 10;
+            text-align: center;
+        }
+nav{
+    background-color: white;
 }
