--- a/style.css
+++ b/style.css
@@ -8,6 +8,40 @@ body{
     justify-content: center;
     
    }
+   #meuContainer{
+    margin-top: 70px;
+        width: 100vw;
+        max-width: 100vw;
+        margin-left: calc(-50vw + 50%);
+        height: 100vh;
+        background-color: #439BCF;
+        display: flex;
+        align-items: center; 
+        justify-content: stretch;
+    }
+   
+    .img-header{
+        width: 30%;
+        width: auto; /* Mantém a proporção da imagem */
+        height: auto; /* Deixa a altura ajustar-se de forma proporcional */
+    }
+    .h1 {
+        width: 70%;
+        text-align: center;
+        position: static;
+    }
+.h1 h1{
+    color: white;
+    font-size: 1.5em;
+}
+.h1 p{
+    color: white;
+}
+.h1 a{
+    background-color: white;
+    border: none;
+    color: #439BCF;
+}
 #logo{
     max-width: 50px;
 }
@@ -18,10 +52,15 @@ body{
     align-items: center;
     padding: 100px;
 }
+.accordion-collapse {
+    transition: height 0.4s ease-in-out, opacity 0.4s ease-in-out;
+}
+
 .about{
     display: flex;
     flex-direction: column;
     text-align: center;
+    width: 100%;
 }
 .row{
     padding: 20px;
@@ -32,29 +71,31 @@ body{
     justify-content: center;
     flex-direction: column;
 }
-.donate-cards{
-    display: flex;
-    flex-direction: row;
+.ctt{
+    padding: 10px;
 }
-.contact{
-    display: flex;
-    flex-direction: column;}
     .contact-cont{
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         justify-content: center;
-    }
+        padding: 10px;
+         }
     .faq{
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
-    
+    .cardss{
+        display: flex;
+        flex-direction: column;
+gap: 10px;    }
 div h1,div h3{
     color: #0e311e;
+    font-size: 1.5rem;
 }
 div h2{
-    color: #91120e;
+    color: #0e311e;
     font-size: 1.5em;
 }
 p{
@@ -64,36 +105,127 @@ p{
     width: 100%;
 }
 
-.carousel-inner img{
-    min-width: 100%;
-    height: 90vh;
-    object-fit: cover; 
-    margin-top: 70px;
+.carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.carousel-inner {
+    min-width: 600px;
+    max-width: 600px;
+    height: 100%;}
+
 .carousel-item {
-    position: relative;
+    width: 100%;
+    height: 400px;
 }
+
 .carousel-item img {
     width: 100%;
+    height: 400px;
     object-fit: cover;
+    display: block;
 }
-.overlay {
-    position: absolute;
-    top: 2%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to top, rgb(255, 255, 255), rgba(0, 0, 0, 0));
-}
-.title{
-    position: absolute;
-    top: 12%;
-    text-align: center;
-    width: 100%;
-            z-index: 10;
-            text-align: center;
-        }
+
+
 nav{
     background-color: white;
+}
+.header img{
+    margin-top:50px
+}
+
+#doe-section{
+    display: flex;
+    justify-content: space-around !important;
+    align-items: stretch;
+    flex-direction: row;
+    width: 100%;
+}
+#doe-section, .pix, .pix p, .pix-card{
+    background-color: #439BCF !important;
+    border: none !important;
+    color: white;
+}
+#doe-section{
+    padding: 50px;
+    border-radius: 8px;
+    flex-wrap: wrap;
+    max-width: inherit;
+}
+.pix{
+    justify-content: center;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+.contact a{
+    text-decoration: none;
+    color: black;
+}
+.social a{
+    margin-right: 5px;
+    color: black;
+}
+footer {
+    margin-top: auto;
+}
+footer p{
+    padding-top: 20%;
+}
+
+@media screen and (max-width: 768px) {
+    .container{
+        padding: 20px;
+    }
+    .row{
+        flex-direction: column;
+    }
+    #logo{
+        max-width: 30px;
+    }
+    .carousel-inner {
+        min-width: 300px;
+        max-width: 300px;
+        height: fit-content;
+    }
+    .carousel-item img {
+        width: 100%; 
+        min-height: fit-content; 
+        object-fit: cover;
+        display: block;
+    }
+   
+        iframe{
+            max-width: 350px;
+        }
+        .img-header img{
+            display: none;
+        }
+    .h1{
+        width: 100%;
+        text-align: center;
+        position: static;
+        height: fit-content;
+    }
+    #meuContainer{
+        height: 70vh;
+        display: flex;
+        align-items: center; 
+        justify-content: stretch;
+        padding: 10px;
+    }
+    .card{
+        width: 90vw;
+    }
+    .contact{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 990px) {
+   .contact{
+    justify-content: center;
+   }
+   
 }
