--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
         max-width: 100vw;
         margin-left: calc(-50vw + 50%);
         height: 100vh;
-        background-color: #439BCF;
+        background-color: #039640;
         display: flex;
         align-items: center; 
         justify-content: space-around;
